A couple more updates...

--- a/data/crew.yml
+++ b/data/crew.yml
@@ -24,11 +24,11 @@
   slug: "brett"
   roles: "Camera operator, and occasional editor"
   bio: >
-    Mild–mannered designer by day, with the assistance of ⌘Tab, Brett transforms into his identically mannered alter–ego; Carpool‘s editor in chief (and sometimes designer) by night.
+    Mild–mannered designer by day, with the power of ⌘Tab Brett transforms into his identically mannered alter–ego; Carpool’s video editor (and also designer) by night.
 
 
-    Preferring to remain on the side of the camera which frames what is being filmed, Brett serves primarily as cameraman for Carpool videos, except for when he himself must step into frame to play the role of someone who cannot act.
+    Preferring to remain on the side of the camera not being filmed, Brett serves primarily as cameraman for Carpool videos, except for when he must step into frame — invariably to play the role of someone who cannot act.
 
 
-    Brett is also chiefly responsible for post–production; handling editing, visual effects and compositing. When not putting off his editing responsibilities, he also applies his experience in clicking, dragging and typing to build and maintain the Carpool website.
+    Brett is also chiefly responsible for post–production; handling editing, visual effects and compositing. When not putting off these responsibilities, he also applies his considerable experience in clicking and dragging to maintain the Carpool website.
   colour: "24, 29, 33"
