Add new podcast episode

--- a/data/podcast.yml
+++ b/data/podcast.yml
@@ -1,3 +1,10 @@
+- title: "“Kanye West, and other historical revisionists”"
+  date: 2018-04-24
+  description: "Join the Carpool crew as the meander through topics including action movie, television shows, videogames, wikipedia article rabbit holes, and how Kanye West uses his computer... But certainly not Chris Chan."
+  embed: "f98fe027"
+  number: "22"
+  slug: "episode-22"
+
 - title: "“The Civil Painter”"
   date: 2018-01-29
   description: "Join the Carpool Crew as they return to talk about topics ranging from politics, to golfing, to works of art such as Pixar’s cars (also: Michelangelo’s David), and develop the original screenplay for the original Carpool dramatisation “The Civil Painter”."
