Add new podcast episode

--- a/data/podcast.yml
+++ b/data/podcast.yml
@@ -1,3 +1,10 @@
+- title: "“Disney Conglomerate Special”"
+  date: 2018-05-22
+  description: "Join the Carpool Crew as David recounts his experience with Solo: A Star Wars Story."
+  embed: "e79b15e0"
+  number: "23"
+  slug: "episode-23"
+
 - title: "“Kanye West, and other historical revisionists”"
   date: 2018-04-24
   description: "Join the Carpool crew as the meander through topics including action movie, television shows, videogames, wikipedia article rabbit holes, and how Kanye West uses his computer... But certainly not Chris Chan."
