Series refactoring Refactoring series feature so that we only have to specify a slug

--- a/data/videos/apocalypse-of-love.yml
+++ b/data/videos/apocalypse-of-love.yml
@@ -2,8 +2,7 @@ title: Apocalypse of Love
 youtube_id: 4Q-194ym7QA
 release_date: 2017-02-01
 category: serie
-series: Horrible Highschool Films
-series_slug: horrible-highschool-films
+series: horrible-highschool-films
 runtime: '00:05:48'
 description: Another old high school film of Carpool's retrieved from a recently discovered sun-damaged floppy-disk. This was one of the more revolutionary high school films that was made as it combined horror and romance...
 credits:
