--- a/data/videos/corona-ad.yml
+++ b/data/videos/corona-ad.yml
@@ -2,8 +2,7 @@ title: Corona Ad
 youtube_id: STTctSmS0Vg
 release_date: 2017-10-12
 category: serie
-series: Honest Ads
-series_slug: honest-ads
+series: honest-ads
 runtime: '00:00:53'
 description: What is it really like when the average person drinks Corona? Beaches, beautiful people, and shitty acoustic guitar music? If Corona were obligated to create an ad that was truthful, this is what the commercial might look like.
 credits:
