--- a/data/videos/detective-noir.yml
+++ b/data/videos/detective-noir.yml
@@ -2,8 +2,7 @@ title: Detective Noir
 youtube_id: L35dHUFJ2Fw
 release_date: 2015-06-29
 category: serie
-series: Horrible Highschool Films
-series_slug: horrible-highschool-films
+series: horrible-highschool-films
 runtime: '00:03:24'
 description: Carpool first started off in the year 8 media labs, making their very first short films as school assignments. Here's one of those films in all it's prepubescent glory.
 credits:
