--- a/data/videos/edgeman.yml
+++ b/data/videos/edgeman.yml
@@ -2,8 +2,7 @@ title: Edgeman
 youtube_id: sd4GVb0TA7A
 release_date: 2016-08-31
 category: serie
-series: Horrible Highschool Films
-series_slug: horrible-highschool-films
+series: horrible-highschool-films
 runtime: '00:06:21'
 description: We found yet another floppy disk that contained this short film project the Carpool crew made back in year 12... Try to enjoy.
 credits:
