--- a/data/videos/getting-ready-for-a-night-out.yml
+++ b/data/videos/getting-ready-for-a-night-out.yml
@@ -3,8 +3,7 @@ youtube_id: uo0zLJTDXzg
 release_date: 2016-11-18
 category: serie
 runtime: '00:06:00'
-series: Aussie Boys
-series_slug: aussie-boys
+series: aussie-boys
 description: Mike and Davo are back, bigger than ever, and are comin your way to sex up ya mum and show yous how to have the raddest friday night of your fucking shitty stupid life. Take it from us professionals.
 credits:
   - name: David Morgan-Brown
