--- a/data/videos/irobot-review.yml
+++ b/data/videos/irobot-review.yml
@@ -3,8 +3,7 @@ youtube_id: hzRkH4DUBlw
 release_date: 2014-12-18
 category: serie
 runtime: '00:15:14'
-series: Boris and Manuel Video CD Watching
-series_slug: boris-and-manuel-reviews
+series: boris-and-manuel-reviews
 description: Hello. This is Boris. This has got to be the worst video we have ever done. I seriously wanted to watch Elektra, but in the end I had to put up with Manuel's friend's shitty choice in film, iRobot.
 credits:
   - name: Boris Kozlovsky
