--- a/data/videos/speeding-ad.yml
+++ b/data/videos/speeding-ad.yml
@@ -3,8 +3,7 @@ youtube_id: 7FWfihRKCic
 release_date: 2016-07-27
 category: serie
 runtime: '00:00:36'
-series: Honest Ads
-series_slug: honest-ads
+series: honest-ads
 description: What really happens when you speed? If government ads were obligated to show what speeding is like in reality, this is the public service advertisement they'd make.
 credits:
   - name: David Morgan-Brown
