--- a/data/videos/three-boys-one-camera-episode-1.yml
+++ b/data/videos/three-boys-one-camera-episode-1.yml
@@ -3,8 +3,7 @@ youtube_id: RwzwWQ6cdG0
 release_date: 2015-02-03
 category: serie
 runtime: '00:06:16'
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 description: Go behind-the-scenes with Michael, David and Brett to see how the Carpool crew produce their videos and deal with conflict, lest they suffer surprising (and permanent) consequences.
 credits:
   - name: Michael Butcher
