--- a/data/videos/three-boys-one-camera-episode-2.yml
+++ b/data/videos/three-boys-one-camera-episode-2.yml
@@ -3,8 +3,7 @@ youtube_id: fwANJXGYvzo
 release_date: 2015-02-10
 category: serie
 runtime: '00:05:15'
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 description: Still reeling from the sudden, absurd events of the previous episode, things will never be the same for David and Brett when they receive a surprise visit from a relative of the recently-deceased Michael.
 credits:
   - name: Michael Butcher
