--- a/data/videos/three-boys-one-camera-episode-3.yml
+++ b/data/videos/three-boys-one-camera-episode-3.yml
@@ -3,8 +3,7 @@ youtube_id: _FQHkAbesCk
 release_date: 2015-02-24
 category: serie
 runtime: '00:05:10'
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 description: Picking up where they left off before Michael's untimely death, the boys contemplate making a new funny video, only to realise they'll need to call in the help of some external talent...
 credits:
   - name: Michael Butcher
