--- a/data/videos/three-boys-one-camera-episode-6.yml
+++ b/data/videos/three-boys-one-camera-episode-6.yml
@@ -3,8 +3,7 @@ youtube_id: DAxof63tPgM
 release_date: 2016-05-20
 category: serie
 runtime: '00:14:39'
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 description: Shock! Surprise! Twist! David isn't dead, ge merely sustained enough brain damage to make him believe he’s some sort of spirit guru! Now he wants to to shut Carpool down, what are Brett and Butcher to do?
 credits:
   - name: Michael Butcher
