--- a/data/videos/whose-next.yml
+++ b/data/videos/whose-next.yml
@@ -2,8 +2,7 @@ title: Whose Next?
 youtube_id: WtBBUQvY1iI
 release_date: 2017-10-25
 category: serie
-series: Horrible Highschool Films
-series_slug: horrible-highschool-films
+series: horrible-highschool-films
 runtime: '00:07:09'
 description: We've unearthed another of the horrible movie projects the Carpool crew had to make back in high school. During the days of mini-camcorders and , they put together this slasher film for their year 12 assignment ... and they almost failed!
 credits:
