--- a/data/videos/guillermo-del-toro-interview.yml
+++ b/data/videos/guillermo-del-toro-interview.yml
@@ -3,8 +3,7 @@ youtube_id: hQlWpsV8tMk
 release_date: 2015-05-20
 category: serie
 runtime: '00:11:52'
-series: Boris and Manuel Video CD Watching
-series_slug: boris-and-manuel-reviews
+series: boris-and-manuel-reviews
 description: Hello this is Manuel! Welcome to Boris and Manuel Get talkin' where we interview people who work in the movie industry! Today we've got a very special guest...
 credits:
   - name: Boris Kozlovsky
