--- a/data/videos/how-to-be-a-man.yml
+++ b/data/videos/how-to-be-a-man.yml
@@ -3,8 +3,7 @@ youtube_id: nrwF7S7yB2I
 release_date: 2018-03-27
 category: serie
 runtime: '00:06:53'
-series: Aussie Boys
-series_slug: aussie-boys
+series: aussie-boys
 description: One half of the Auzzie Boys are back, with Miko and his cuz Brazzo here to tell you soft kuntz how to be manly men!!
 credits:
   - name: David Morgan-Brown
