--- a/data/videos/how-to-pick-up-chicks.yml
+++ b/data/videos/how-to-pick-up-chicks.yml
@@ -3,8 +3,7 @@ youtube_id: MtjNY7_5nmU
 release_date: 2015-11-18
 category: serie
 runtime: '00:07:56'
-series: Aussie Boys
-series_slug: aussie-boys
+series: aussie-boys
 description: Yo, bitches, its goin down with Its Goin Down, where Mike and Davo tell yous how to pick up chicks and FUCK 'EM! Don't forget to hit us up on our website. Peace!
 credits:
   - name: David Morgan-Brown
