--- a/data/videos/matrix-revolutions-review.yml
+++ b/data/videos/matrix-revolutions-review.yml
@@ -3,8 +3,7 @@ youtube_id: KJwBwb1dq_Q
 release_date: 2015-01-12
 category: serie
 runtime: '00:11:52'
-series: Boris and Manuel Video CD Watching
-series_slug: boris-and-manuel-reviews
+series: boris-and-manuel-reviews
 description: Hello Boris again. Today we review obscure arthouse film Manuel likes to intellectulary pleasure himself to, The Matix Resolutions. Is it deep movie or total crap-fest? Tune in to find out.
 credits:
   - name: Boris Kozlovsky
