--- a/data/videos/redbull-ad.yml
+++ b/data/videos/redbull-ad.yml
@@ -3,8 +3,7 @@ youtube_id: U17Ing83dY0
 release_date: 2015-06-14
 category: serie
 runtime: '00:00:53'
-series: Honest Ads
-series_slug: honest-ads
+series: honest-ads
 description: What is it really like to drink RedBull? If commercials were obligated to reflect the reality of downing a six pack of RedBull Energy Drink, this is what a RedBull commercial may look like.
 credits:
   - name: Michael Butcher
