--- a/data/videos/spiderman-2-review.yml
+++ b/data/videos/spiderman-2-review.yml
@@ -3,8 +3,7 @@ youtube_id: IKUM7t8HZBw
 release_date: 2014-11-27
 category: serie
 runtime: '00:13:40'
-series: Boris and Manuel Video CD Watching
-series_slug: boris-and-manuel-reviews
+series: boris-and-manuel-reviews
 description: Hello, I am Manuel. Thank you for watching our video, where we take movies and watch them and review them in order to help you decide about what movie is good or not.
 credits:
   - name: Boris Kozlovsky
