--- a/data/videos/three-boys-one-camera-episode-4.yml
+++ b/data/videos/three-boys-one-camera-episode-4.yml
@@ -3,8 +3,7 @@ youtube_id: je94kqn0I4s
 release_date: 2015-06-22
 category: serie
 runtime: '00:06:11'
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 description: "In this thrilling addition to Three Boys One Camera, we go behind the scenes of the latest and greatest comedy classic to come from Carpool Studios: Too Many Uncles!"
 credits:
   - name: Michael Butcher
