--- a/data/videos/three-boys-one-camera-episode-5.yml
+++ b/data/videos/three-boys-one-camera-episode-5.yml
@@ -3,8 +3,7 @@ youtube_id: 1V_MDNpimfI
 release_date: 2016-02-07
 category: serie
 runtime: '00:09:38'
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 description: David is terminally ill! The founder of Carpool is about to die a slow and painful death. But before he dies, he has so many videos to finish off and he needs the help of his unpaid employees to pull it off.
 credits:
   - name: Michael Butcher
