--- a/data/videos/three-boys-one-camera-episode-7.yml
+++ b/data/videos/three-boys-one-camera-episode-7.yml
@@ -2,8 +2,7 @@ title: Episode 7
 youtube_id: HL1IbF-dpd8
 release_date: 2017-12-05
 category: serie
-series: Three Boys, One Camera
-series_slug: three-boys-one-camera
+series: three-boys-one-camera
 runtime: '00:13:12'
 description: The Carpool crew’s tireless efforts have been recognised, and now their movie has been green lit! But tensions between Butcher and Brett begin to rise, as New David manipulates the situation to create true authenticity for his vision.
 credits:
