--- a/data/videos/xbox-one-commercial.yml
+++ b/data/videos/xbox-one-commercial.yml
@@ -3,8 +3,7 @@ youtube_id: oxXR93BQAmg
 release_date: 2015-01-28
 category: serie
 runtime: '00:00:29'
-series: Honest Ads
-series_slug: honest-ads
+series: honest-ads
 description: What is it really like to own an Xbox One? If commercials were obligated to reflect the reality of owning an Xbox One, this is what an Xbox One commercial from Microsoft may look like.
 credits:
   - name: Michael Butcher
