--- a/data/videos/three-boys-one-camera-episode-4.yml
+++ b/data/videos/three-boys-one-camera-episode-4.yml
@@ -1,10 +1,10 @@
-title: Too Many Uncles
-youtube_id: je94kqn0I4s
-release_date: 2015-06-22
+title: Episode 4
+youtube_id: 1V_MDNpimfI
+release_date: 2016-02-07
 category: serie
-runtime: '00:06:11'
+runtime: '00:09:38'
 series: three-boys-one-camera
-description: "In this thrilling addition to Three Boys One Camera, we go behind the scenes of the latest and greatest comedy classic to come from Carpool Studios: Too Many Uncles!"
+description: David is terminally ill! The founder of Carpool is about to die a slow and painful death. But before he dies, he has so many videos to finish off and he needs the help of his unpaid employees to pull it off.
 credits:
   - name: Michael Butcher
     description: Starring, Writing, Editing
