--- a/data/videos/three-boys-one-camera-episode-5.yml
+++ b/data/videos/three-boys-one-camera-episode-5.yml
@@ -1,10 +1,10 @@
 title: Episode 5
-youtube_id: 1V_MDNpimfI
-release_date: 2016-02-07
+youtube_id: DAxof63tPgM
+release_date: 2016-05-20
 category: serie
-runtime: '00:09:38'
+runtime: '00:14:39'
 series: three-boys-one-camera
-description: David is terminally ill! The founder of Carpool is about to die a slow and painful death. But before he dies, he has so many videos to finish off and he needs the help of his unpaid employees to pull it off.
+description: Shock! Surprise! Twist! David isn't dead, he merely sustained enough brain damage to make him believe he’s some sort of spirit guru! Now he wants to to shut Carpool down, what are Brett and Butcher to do?
 credits:
   - name: Michael Butcher
     description: Starring, Writing, Editing
@@ -15,6 +15,3 @@ credits:
   - name: Brett Jones
     description: Starring, Additional camera
     slug: brett
-  - name: Caitlin Clough
-    description: Camera
-    slug: caitlin
