Stylistic updates Make 3b1ce6 featured video

--- a/data/feature.yml
+++ b/data/feature.yml
@@ -1,4 +1,4 @@
-- slug: how-to-be-a-man
-  subtitle: Aussie Boys
-  title: How to be a man
-  description: One half of the Auzzie Boys are back, with Miko and his cuz Brazzo here to tell you soft kuntz how to be manly men!!
+- slug: three-boys-one-camera-episode-6
+  subtitle: Three Boys One Camera
+  title: Episode 6
+  description: The Carpool Movie has been green lit! But tensions between Butcher and Brett begin to rise, as New David manipulates the situation to create authenticity for his vision.
