--- a/data/podcast.yml
+++ b/data/podcast.yml
@@ -1,148 +1,141 @@
-- title: "“Disney Conglomerate Special”"
+- title: “Disney Conglomerate Special”
   date: 2018-05-22
   description: "Join the Carpool Crew as David recounts his experience with Solo: A Star Wars Story."
-  embed: "e79b15e0"
+  embed: "23-Disney-Conglomerate-Special-e2055q"
   number: "23"
-  slug: "episode-23"
 
-- title: "“Kanye West, and other historical revisionists”"
+- title: “Kanye West, and other historical revisionists”
   date: 2018-04-24
   description: "Join the Carpool crew as the meander through topics including action movie, television shows, videogames, wikipedia article rabbit holes, and how Kanye West uses his computer... But certainly not Chris Chan."
-  embed: "f98fe027"
+  embed: "22-Kanye-West--and-other-historical-revisionists-e2055p"
   number: "22"
-  slug: "episode-22"
 
-- title: "“The Civil Painter”"
+- title: “The Civil Painter”
   date: 2018-01-29
   description: "Join the Carpool Crew as they return to talk about topics ranging from politics, to golfing, to works of art such as Pixar’s cars (also: Michelangelo’s David), and develop the original screenplay for the original Carpool dramatisation “The Civil Painter”."
   embed: "0cfbfd37"
-  number: "21"
-  slug: "episode-21"
+  number: "21-The-Civil-Painter-e2055u"
 
-- title: "“Who do we fight? Your big brother? He’s too old — he’s fifteen, he’s out with his friends, he’s smoking some weed”"
+- title: “Who do we fight? Your big brother? He’s too old — he’s fifteen, he’s out with his friends, he’s smoking some weed”
   date: 2018-01-08
   description: "The Carpool crew return in 2018 with a live show, talking about Star Wars The Last Jedi and the holiday special, the recent Logan Paul drama, the future (and the past) of Carpool productions, and much more."
-  embed: "480a2143"
+  embed: "20-Who-do-we-fight--Your-big-brother--Hes-too-old--hes-fifteen--hes-out-with-his-friends--hes-smoking-some-weed-e20556"
   number: "20"
-  slug: "episode-20"
 
 - title: "“Your career can always bounce back, no matter what you do”"
   date: 2017-12-19
   description: "The Carpool Crew return from another long hiatus to discuss such topical matters as a ten–year–old television show, Peewee Herman’s illicit exploits, and the far-future reality of the eternal Disney movie machine and Facebook’s implications on humanity."
-  embed: "173918dd"
+  embed: "Your-career-can-always-bounce-back--no-matter-what-you-do-e2055t"
   number: "19"
-  slug: "episode-19"
 
 - title: "“Pewdiepie and Hitler go together like Chocolate and Beer”"
   date: 2016-07-21
   description: "Join the Carpool Crew as they attempt to balance a Ferrero Rocher on their microphone, discuss the implications of recording conversations as a podcast, the little-known United Republic of Czechoyoprussian Empire, the inevitable AI and robot uprising, and more."
-  embed: "42475"
+  embed: "Pewdiepie-and-Hitler-go-together-like-Chocolate-and-Beer-e20555"
   number: "18"
-  slug: "episode-18"
 
 - title: "“Squad-Reviewed Scientific Journals”"
   date: 2016-07-16
   description: "Recorded 2 months ago, when Brett was congratulating himself on more timely podcast releases, enjoy this 2 month old time capsule into the far-flung past where the Carpool crew speculate about VR technology, Adult Swim cartoons and more."
-  embed: "42474"
+  embed: "Squad-Reviewed-Scientific-Journals-e20558"
   number: "17"
-  slug: "episode-17"
 
 - title: "“There’s nothing more Australian than smoking weed on the top of Ularu.”"
   date: 2016-04-11
   description: "Join the Carpool Crew as they recount their adventure at X-Scape at the City, having each survived multiple run-ins with the largest waterslide in the Southern Hemisphere, plus random digressions into James Bond and Terminator 2, and impressions on the new Star Wars Rogue One trailer."
-  embed: "35029"
+  embed: "Theres-nothing-more-Australian-than-smoking-weed-on-the-top-of-Ularu-e2055s"
   number: "16"
-  slug: "episode-16"
+
 
 - title: "They called it the “The Tinder Experiment” when they could have called it “Tinder Surprise”."
   date: 2016-04-05
   description: "Join the Carpool Crew as the return from a brief hiatus of podcasting, to discuss important topics including diet soft drinks and alochol slushies, music, Respawn Cheez TV event follow-up, pranking for “Public Awareness” and more."
-  embed: "34660"
+  embed: "They-called-it-the-The-Tinder-Experiment-when-they-could-have-called-it-Tinder-Surprise-e20560"
   number: "15"
-  slug: "episode-15"
+
 
 - title: "“Did anyone else hear that?” “Nah man, I was watching 9/11.” (Hateful Eight Spoilers)"
   date: 2016-02-16
   description: "The Carpool Crew return to discuss drinking, diet soda beverage rankings and unnatural energy drinks, The Hateful Eight, The return of Jade and Ryan from Cheez TV and more."
-  embed: "26782"
+  embed: "Did-anyone-else-hear-that--Nah-man--I-was-watching-911--Hateful-Eight-Spoilers-e20562"
   number: "14"
-  slug: "episode-14"
+
 
 - title: "“More of a fan, by volume” (Star Wars Force Awakens Spoilers)"
   date: 2015-12-23
   description: "The Carpool crew return to discuss their impressions of and spoil the ending to Star Wars: The Force Awakens, movie trailers, the original and prequel trilogies, and the Independence Day Resurgence and Star Trek Beyond trailers."
-  embed: "23562"
+  embed: "More-of-a-fan--by-volume-Star-Wars-Force-Awakens-Spoilers-e2055c"
   number: "13"
-  slug: "episode-13"
+
 - title: "Bonus: Brett and David’s Force Awakens Impressions (Spoilers)"
   date: 2015-12-19
   description: "Brett and David discuss Star Wars: The Force Awakens on the way back from the cinemas."
-  embed: "23217"
+  embed: "Bonus-Brett-and-Davids-Force-Awakens-Impressions-Spoilers-e2055g"
   number: "12"
-  slug: "episode-12"
+
 - title: "“I’m a bulimic, but I’m professional about it, that’s probably why you confused me for a model...”"
   date: 2015-12-19
   description: "The Carpool Crew discuss Adventure World, Trolly Facebook comments, Tim & Eric, Spectre, and Star Wars Force Awakens expectations."
-  embed: "23216"
+  embed: "Im-a-bulimic--but-Im-professional-about-it--thats-probably-why-you-confused-me-for-a-model-e20566"
   number: "11"
-  slug: "episode-11"
+
 - title: "“I wish George Lucas had committed suicide” (featuring special guest Stephen Jones)"
   date: 2015-10-27
   description: "David, Michael and Brett are joined by special guest Stephen Jones to discuss Back to the Future, Laser Discs, 4K Blu Ray, Quentin Tarantino, David Cameron’s pignitiation, Dictators, A Current Affairs with Pubes, Star Wars and more."
-  embed: "19245"
+  embed: "I-wish-George-Lucas-had-committed-suicide-featuring-special-guest-Stephen-Jones-e2055e"
   number: "10"
-  slug: "episode-10"
+
 - title: "“That’s our second channel where we prank people...”"
   date: 2015-10-06
   description: "The Carpool crew convene to play a round of Exploding Kittens and discuss The Royal Show, aging, various TV shows and books."
-  embed: "18132"
+  embed: "Thats-our-second-channel-where-we-prank-people-e2055h"
   number: "9"
-  slug: "episode-9"
+
 - title: "“The Worst Podcast We’ve Ever Done...”"
   date: 2015-09-30
   description: "The Carpool crew return to discuss Super Mario Maker, True Detective Season 2, Waterslides in Perth, Good Movie Adaptations, IMDB ratings, reminiscing over classic internet video series, and surreal Australian Simpson parodies."
-  embed: "17864"
+  embed: "The-Worst-Podcast-Weve-Ever-Done-e2055i"
   number: "8"
-  slug: "episode-8"
+
 - title: "“You ever come home and your dog’s listening to Smashmouth?”"
   date: 2015-08-16
   description: "David, Michael and Brett return to discuss — amongst other things — a new Carpool video inspired by unoriginal and unintentionally ironic tattoos, the production of Too Many Uncles coinciding with the Adam Goodes racially motivated booing controversy, Inside Out, Wreck-it Ralph and lesser films like Pixels and Minions."
-  embed: "15386"
+  embed: "You-ever-come-home-and-your-dogs-listening-to-Smashmouth-e2056a"
   number: "7"
-  slug: "episode-7"
+
 - title: "Jesus Said Unto Him, ‘Fuck Off, We’re Full’.”"
   date: 2015-07-06
   description: "The Carpool crew convene to discuss the outcome of a scenario wherein David must murder every animal on the planet single-handedly to save his own life, the start of True Detective season 2, the conclusion of season 5 of Game of Thrones, E3 2015, the ground-breaking ruling on marriage equality in America and more."
-  embed: "13851"
+  embed: "Jesus-Said-Unto-Him--Fuck-Off--Were-Full-e20568"
   number: "6"
-  slug: "episode-6"
+
 - title: "“Brutal Sounds of Brett Being Beaten to Death...”"
   date: 2015-06-28
   description: "David, Michael and Brett return to discuss the Jurassic World, David’s progress with Breaking Bad and some upcoming Carpool projects."
-  embed: "13502"
+  embed: "Brutal-Sounds-of-Brett-Being-Beaten-to-Death-e2055k"
   number: "5"
-  slug: "episode-5"
+
 - title: "“I mean, look at it, it's very phallic...”"
   date: 2015-06-22
   description: "Join David, Michael and Brett as they discuss a range of hot topics, including David’s catching up on Breaking Bad after watching Better Call Saul, amongst other TV shows (such as Eurovision), and their live, on-air, delayed reaction to Cadbury Vegemite chocolate."
-  embed: "13246"
+  embed: "I-mean--look-at-it--its-very-phallic-e2055l"
   number: "4"
-  slug: "episode-4"
+
 - title: "Tri-gate"
   date: 2015-05-22
   description: "David, Michael and Brett return this week to discuss the new Mad Max film, superhero films as a mediocre genre, The Dark Knight trilogy and which is worst, Harry Shearer leaving the Simpsons and which season it became objectively bad, and upcoming Carpool projects."
-  embed: "12469"
+  embed: "Tri-gate-e2055m"
   number: "3"
-  slug: "episode-3"
+
 - title: "The second (and possibly last) one"
   date: 2015-05-16
   description: "David, Michael and Brett return to discuss a range of issues varying in triviality. From The (long-running) Simpsons, new projects and Youtube’s rumoured subscription model potentially killing Carpool prematurely."
-  embed: "11863"
+  embed: "The-second-and-possibly-last-one-e2055n"
   number: "2"
-  slug: "episode-2"
+
 - title: "The Return"
   date: 2014-11-05
   description: "Join David, Michael and Brett as they discuss the relaunch of Carpool, go behind the scenes of the production of the relaunch video. There's also some trivia around old Carpool projects, and discussion around the upcoming Thing Dub. That, and much more stuff you probably don't want to hear coming right up!"
-  embed: "5443"
+  embed: "The-Relaunch-e2055o"
   number: "1"
-  slug: "episode-1"
+
