--- a/data/podcast.yml
+++ b/data/podcast.yml
@@ -1,3 +1,9 @@
+- title: “Do a ragdoll onto the rocks”
+  date: 2018-09-27
+  description: "Join the Carpool Crew as they discuss a range of topics, including such topical events as E3 2018, and much more."
+  embed: "23-Disney-Conglomerate-Special-e2055q"
+  number: "24"
+  
 - title: “Disney Conglomerate Special”
   date: 2018-05-22
   description: "Join the Carpool Crew as David recounts his experience with Solo: A Star Wars Story."
