--- a/data/podcast.yml
+++ b/data/podcast.yml
@@ -1,6 +1,6 @@
 - title: “I don’t want everyone knowing I’m bringing Doritos home for dinner again”
   date: 2018-10-07
-  description:
+  description: Join the Carpool Crew as they discuss a range of varying topics of triviality, including beer, new speed cameras in Perth, the plastic bag ban, and much more.
   embed: "25-I-dont-want-everyone-knowing-Im-bringing-Doritos-home-for-dinner-again-e2bpc6"
   number: "25"
   
