Add November episode

--- a/data/podcast.yml
+++ b/data/podcast.yml
@@ -1,3 +1,9 @@
+- title: “Oh, so we actually are going to end on that note…”
+  date: 2018-11-18
+  description: Join the Carpool Crew as they discuss You Were Never Really Here, the oldest usage of CGI in filmmaking, the upcoming new seasons of True Detective and House of Cards, and so bad–it’s–good films like Story of Ricky (and just plain terrible films like Foodfight!)
+  embed: "26-Oh--so-we-actually-are-going-to-end-on-that-note-e2jrhf"
+  number: "26"
+ 
 - title: “I don’t want everyone knowing I’m bringing Doritos home for dinner again”
   date: 2018-10-07
   description: Join the Carpool Crew as they discuss a range of varying topics of triviality, including beer, new speed cameras in Perth, the plastic bag ban, and much more.
