--- a/data/feature.yml
+++ b/data/feature.yml
@@ -1,4 +1,4 @@
-- slug: three-boys-one-camera-episode-6
-  subtitle: Three Boys One Camera
-  title: Episode 6
-  description: The Carpool Movie has been green lit! But tensions between Butcher and Brett begin to rise, as New David manipulates the situation to create authenticity for his vision.
+- slug: black-mirror-season-5-brainstorming
+  subtitle: Black Mirror
+  title: Season 5 Brainstorming
+  description: Cor, blimey, the writers an’ dat are busy as fook dialing out some sick oideas for the new Black Mirror season. Wot could be any more scary than da future of Britain, innit?
