Add in Rodneys Christmas video - Add opengraph details - Change feature page - Add instagram to footer

--- a/data/feature.yml
+++ b/data/feature.yml
@@ -1,4 +1,4 @@
-- slug: three-boys-one-camera-episode-6
-  subtitle: Three Boys One Camera
-  title: Episode 6
-  description: The Carpool Movie has been green lit! But tensions between Butcher and Brett begin to rise, as New David manipulates the situation to create authenticity for his vision.
+- slug: rodneys-christmas
+  subtitle: Christmas Special
+  title: Rodney’s Christmas
+  description: ""
