--- a/data/videos/rodneys-christmas.yml
+++ b/data/videos/rodneys-christmas.yml
@@ -1,9 +1,9 @@
 title: Rodney’s Christmas
-youtube_id: iN7blXL3t94
-release_date: 2018-12-18
+youtube_id: PPhxCQTbjGY
+release_date: 2018-12-19
 category: short
-runtime: '00:04:47'
-description: It’s Christmas day, and Rodney is excited to open his presents. But he’s about to learn that it’s far better to give, than to receive.
+runtime: '00:04:49'
+description: Rodney awakens on Christmas day to find that his terrible parents have left him, and also left him a rather un-terrible gift! The gift of friendship — DOWN UNDER!
 credits:
   - name: David Morgan-Brown
     description: Starring
