--- a/data/feature.yml
+++ b/data/feature.yml
@@ -1,4 +1,4 @@
 - slug: rodneys-christmas
   subtitle: Christmas Special
   title: Rodney’s Christmas
-  description: It’s Christmas day, and Rodney is excited to open his presents...
+  description: Rodney awakens on Christmas day to find that his terrible parents have left him, and also left him a rather un-terrible gift! The gift of friendship — DOWN UNDER!
